--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -51,3 +51,88 @@ tidy_df %>%
 There is a within-subject correlation. Subjects in the control groups do
 not have a specific trend in change overtime, while subjects in the
 experimental group have a linear increase in general.
+
+# Problem 2
+
+``` r
+homicide = read.csv("data/homicide-data.csv") %>% 
+  janitor::clean_names() 
+```
+
+The raw dataset contain 52179 observations and 12 variables. The key
+variables are uid, reported_date, victims’ names, race, age, sex, city,
+state, longitude and latitude, and one disposition variable indicating
+the arrest status of the victims. The raw dataset summarizes homicides
+data in 28 states and 50 cities.
+
+``` r
+homicide = homicide %>% 
+  mutate(
+    city_state = str_c(city, ", ", state)
+  )
+
+homicide %>% 
+  group_by(city) %>% 
+  summarize(
+    total_number = n(),
+    total_unsolved = sum(disposition == c("Closed without arrest", "Open/No arrest")
+  )) %>% 
+  knitr::kable()
+```
+
+| city           | total_number | total_unsolved |
+|:---------------|-------------:|---------------:|
+| Albuquerque    |          378 |             75 |
+| Atlanta        |          973 |            172 |
+| Baltimore      |         2827 |            906 |
+| Baton Rouge    |          424 |            102 |
+| Birmingham     |          800 |            192 |
+| Boston         |          614 |            154 |
+| Buffalo        |          521 |            157 |
+| Charlotte      |          687 |            101 |
+| Chicago        |         5535 |           2046 |
+| Cincinnati     |          694 |            151 |
+| Columbus       |         1084 |            308 |
+| Dallas         |         1567 |            381 |
+| Denver         |          312 |             82 |
+| Detroit        |         2519 |            739 |
+| Durham         |          276 |             51 |
+| Fort Worth     |          549 |            125 |
+| Fresno         |          487 |             88 |
+| Houston        |         2942 |            705 |
+| Indianapolis   |         1322 |            309 |
+| Jacksonville   |         1168 |            305 |
+| Kansas City    |         1190 |            251 |
+| Las Vegas      |         1381 |            274 |
+| Long Beach     |          378 |             81 |
+| Los Angeles    |         2257 |            551 |
+| Louisville     |          576 |            139 |
+| Memphis        |         1514 |            259 |
+| Miami          |          744 |            225 |
+| Milwaukee      |         1115 |            197 |
+| Minneapolis    |          366 |             89 |
+| Nashville      |          767 |            130 |
+| New Orleans    |         1434 |            479 |
+| New York       |          627 |            102 |
+| Oakland        |          947 |            255 |
+| Oklahoma City  |          672 |            158 |
+| Omaha          |          409 |             80 |
+| Philadelphia   |         3037 |            684 |
+| Phoenix        |          914 |            250 |
+| Pittsburgh     |          631 |            169 |
+| Richmond       |          429 |             53 |
+| Sacramento     |          376 |             71 |
+| San Antonio    |          833 |            178 |
+| San Bernardino |          275 |             82 |
+| San Diego      |          461 |             81 |
+| San Francisco  |          663 |            166 |
+| Savannah       |          246 |             50 |
+| St. Louis      |         1677 |            449 |
+| Stockton       |          444 |            136 |
+| Tampa          |          208 |             56 |
+| Tulsa          |          584 |             83 |
+| Washington     |         1345 |            306 |
+
+The above table summarizes within cities the total number of homicides
+indicating by `total_number` and the number of unsolved homicides
+indicating by `total_unsolved`.
