--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -71,68 +71,93 @@ homicide = homicide %>%
     city_state = str_c(city, ", ", state)
   )
 
-homicide %>% 
-  group_by(city) %>% 
+
+summary = homicide %>% 
+  group_by(city_state) %>% 
   summarize(
     total_number = n(),
     total_unsolved = sum(disposition == c("Closed without arrest", "Open/No arrest")
-  )) %>% 
-  knitr::kable()
+  ))
+
+summary %>% knitr::kable()
 ```
 
-| city           | total_number | total_unsolved |
-|:---------------|-------------:|---------------:|
-| Albuquerque    |          378 |             75 |
-| Atlanta        |          973 |            172 |
-| Baltimore      |         2827 |            906 |
-| Baton Rouge    |          424 |            102 |
-| Birmingham     |          800 |            192 |
-| Boston         |          614 |            154 |
-| Buffalo        |          521 |            157 |
-| Charlotte      |          687 |            101 |
-| Chicago        |         5535 |           2046 |
-| Cincinnati     |          694 |            151 |
-| Columbus       |         1084 |            308 |
-| Dallas         |         1567 |            381 |
-| Denver         |          312 |             82 |
-| Detroit        |         2519 |            739 |
-| Durham         |          276 |             51 |
-| Fort Worth     |          549 |            125 |
-| Fresno         |          487 |             88 |
-| Houston        |         2942 |            705 |
-| Indianapolis   |         1322 |            309 |
-| Jacksonville   |         1168 |            305 |
-| Kansas City    |         1190 |            251 |
-| Las Vegas      |         1381 |            274 |
-| Long Beach     |          378 |             81 |
-| Los Angeles    |         2257 |            551 |
-| Louisville     |          576 |            139 |
-| Memphis        |         1514 |            259 |
-| Miami          |          744 |            225 |
-| Milwaukee      |         1115 |            197 |
-| Minneapolis    |          366 |             89 |
-| Nashville      |          767 |            130 |
-| New Orleans    |         1434 |            479 |
-| New York       |          627 |            102 |
-| Oakland        |          947 |            255 |
-| Oklahoma City  |          672 |            158 |
-| Omaha          |          409 |             80 |
-| Philadelphia   |         3037 |            684 |
-| Phoenix        |          914 |            250 |
-| Pittsburgh     |          631 |            169 |
-| Richmond       |          429 |             53 |
-| Sacramento     |          376 |             71 |
-| San Antonio    |          833 |            178 |
-| San Bernardino |          275 |             82 |
-| San Diego      |          461 |             81 |
-| San Francisco  |          663 |            166 |
-| Savannah       |          246 |             50 |
-| St. Louis      |         1677 |            449 |
-| Stockton       |          444 |            136 |
-| Tampa          |          208 |             56 |
-| Tulsa          |          584 |             83 |
-| Washington     |         1345 |            306 |
+| city_state         | total_number | total_unsolved |
+|:-------------------|-------------:|---------------:|
+| Albuquerque, NM    |          378 |             75 |
+| Atlanta, GA        |          973 |            172 |
+| Baltimore, MD      |         2827 |            906 |
+| Baton Rouge, LA    |          424 |            102 |
+| Birmingham, AL     |          800 |            192 |
+| Boston, MA         |          614 |            154 |
+| Buffalo, NY        |          521 |            157 |
+| Charlotte, NC      |          687 |            101 |
+| Chicago, IL        |         5535 |           2046 |
+| Cincinnati, OH     |          694 |            151 |
+| Columbus, OH       |         1084 |            308 |
+| Dallas, TX         |         1567 |            381 |
+| Denver, CO         |          312 |             82 |
+| Detroit, MI        |         2519 |            739 |
+| Durham, NC         |          276 |             51 |
+| Fort Worth, TX     |          549 |            125 |
+| Fresno, CA         |          487 |             88 |
+| Houston, TX        |         2942 |            705 |
+| Indianapolis, IN   |         1322 |            309 |
+| Jacksonville, FL   |         1168 |            305 |
+| Kansas City, MO    |         1190 |            251 |
+| Las Vegas, NV      |         1381 |            274 |
+| Long Beach, CA     |          378 |             81 |
+| Los Angeles, CA    |         2257 |            551 |
+| Louisville, KY     |          576 |            139 |
+| Memphis, TN        |         1514 |            259 |
+| Miami, FL          |          744 |            225 |
+| Milwaukee, wI      |         1115 |            197 |
+| Minneapolis, MN    |          366 |             89 |
+| Nashville, TN      |          767 |            130 |
+| New Orleans, LA    |         1434 |            479 |
+| New York, NY       |          627 |            102 |
+| Oakland, CA        |          947 |            255 |
+| Oklahoma City, OK  |          672 |            158 |
+| Omaha, NE          |          409 |             80 |
+| Philadelphia, PA   |         3037 |            684 |
+| Phoenix, AZ        |          914 |            250 |
+| Pittsburgh, PA     |          631 |            169 |
+| Richmond, VA       |          429 |             53 |
+| Sacramento, CA     |          376 |             71 |
+| San Antonio, TX    |          833 |            178 |
+| San Bernardino, CA |          275 |             82 |
+| San Diego, CA      |          461 |             81 |
+| San Francisco, CA  |          663 |            166 |
+| Savannah, GA       |          246 |             50 |
+| St. Louis, MO      |         1677 |            449 |
+| Stockton, CA       |          444 |            136 |
+| Tampa, FL          |          208 |             56 |
+| Tulsa, AL          |            1 |              0 |
+| Tulsa, OK          |          583 |             83 |
+| Washington, DC     |         1345 |            306 |
 
 The above table summarizes within cities the total number of homicides
 indicating by `total_number` and the number of unsolved homicides
 indicating by `total_unsolved`.
+
+Use `prop.test()` function to estimate the proportion of unsolved
+homicides in Baltimore, MD.
+
+``` r
+baltimore_test = prop.test(
+    summary %>% filter(city_state == "Baltimore, MD") %>% pull(total_unsolved),
+    summary %>% filter(city_state == "Baltimore, MD") %>% pull(total_number)
+    ) %>% 
+  broom::tidy()
+
+baltimore_test %>% 
+  select(estimate, conf.low, conf.high) %>% 
+  knitr::kable(digits = 3)
+```
+
+| estimate | conf.low | conf.high |
+|---------:|---------:|----------:|
+|     0.32 |    0.303 |     0.338 |
+
+The estimate of proportion of homicides that are unsolved in Baltimore
+is 0.3204811 (95% CI: 0.3033582 to 0.3380962).
