--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -65,10 +65,15 @@ state, longitude and latitude, and one disposition variable indicating
 the arrest status of the victims. The raw dataset summarizes homicides
 data in 28 states and 50 cities.
 
+Use `mutate()` to create the new variable `city_state` and recode the
+possible typo of `Tulsa, AL` to `Tulsa, OK`. Create the summary table of
+the total number of homicides and the number of unsolved homicides.
+
 ``` r
 homicide = homicide %>% 
   mutate(
-    city_state = str_c(city, ", ", state)
+    city_state = str_c(city, ", ", state),
+    city_state = recode(city_state, "Tulsa, AL" = "Tulsa, OK")
   )
 
 
@@ -76,7 +81,7 @@ summary = homicide %>%
   group_by(city_state) %>% 
   summarize(
     total_number = n(),
-    total_unsolved = sum(disposition == c("Closed without arrest", "Open/No arrest")
+    total_unsolved = sum(disposition %in% c("Closed without arrest", "Open/No arrest")
   ))
 
 summary %>% knitr::kable()
@@ -84,57 +89,56 @@ summary %>% knitr::kable()
 
 | city_state         | total_number | total_unsolved |
 |:-------------------|-------------:|---------------:|
-| Albuquerque, NM    |          378 |             75 |
-| Atlanta, GA        |          973 |            172 |
-| Baltimore, MD      |         2827 |            906 |
-| Baton Rouge, LA    |          424 |            102 |
-| Birmingham, AL     |          800 |            192 |
-| Boston, MA         |          614 |            154 |
-| Buffalo, NY        |          521 |            157 |
-| Charlotte, NC      |          687 |            101 |
-| Chicago, IL        |         5535 |           2046 |
-| Cincinnati, OH     |          694 |            151 |
-| Columbus, OH       |         1084 |            308 |
-| Dallas, TX         |         1567 |            381 |
-| Denver, CO         |          312 |             82 |
-| Detroit, MI        |         2519 |            739 |
-| Durham, NC         |          276 |             51 |
-| Fort Worth, TX     |          549 |            125 |
-| Fresno, CA         |          487 |             88 |
-| Houston, TX        |         2942 |            705 |
-| Indianapolis, IN   |         1322 |            309 |
-| Jacksonville, FL   |         1168 |            305 |
-| Kansas City, MO    |         1190 |            251 |
-| Las Vegas, NV      |         1381 |            274 |
-| Long Beach, CA     |          378 |             81 |
-| Los Angeles, CA    |         2257 |            551 |
-| Louisville, KY     |          576 |            139 |
-| Memphis, TN        |         1514 |            259 |
-| Miami, FL          |          744 |            225 |
-| Milwaukee, wI      |         1115 |            197 |
-| Minneapolis, MN    |          366 |             89 |
-| Nashville, TN      |          767 |            130 |
-| New Orleans, LA    |         1434 |            479 |
-| New York, NY       |          627 |            102 |
-| Oakland, CA        |          947 |            255 |
-| Oklahoma City, OK  |          672 |            158 |
-| Omaha, NE          |          409 |             80 |
-| Philadelphia, PA   |         3037 |            684 |
-| Phoenix, AZ        |          914 |            250 |
-| Pittsburgh, PA     |          631 |            169 |
-| Richmond, VA       |          429 |             53 |
-| Sacramento, CA     |          376 |             71 |
-| San Antonio, TX    |          833 |            178 |
-| San Bernardino, CA |          275 |             82 |
-| San Diego, CA      |          461 |             81 |
-| San Francisco, CA  |          663 |            166 |
-| Savannah, GA       |          246 |             50 |
-| St. Louis, MO      |         1677 |            449 |
-| Stockton, CA       |          444 |            136 |
-| Tampa, FL          |          208 |             56 |
-| Tulsa, AL          |            1 |              0 |
-| Tulsa, OK          |          583 |             83 |
-| Washington, DC     |         1345 |            306 |
+| Albuquerque, NM    |          378 |            146 |
+| Atlanta, GA        |          973 |            373 |
+| Baltimore, MD      |         2827 |           1825 |
+| Baton Rouge, LA    |          424 |            196 |
+| Birmingham, AL     |          800 |            347 |
+| Boston, MA         |          614 |            310 |
+| Buffalo, NY        |          521 |            319 |
+| Charlotte, NC      |          687 |            206 |
+| Chicago, IL        |         5535 |           4073 |
+| Cincinnati, OH     |          694 |            309 |
+| Columbus, OH       |         1084 |            575 |
+| Dallas, TX         |         1567 |            754 |
+| Denver, CO         |          312 |            169 |
+| Detroit, MI        |         2519 |           1482 |
+| Durham, NC         |          276 |            101 |
+| Fort Worth, TX     |          549 |            255 |
+| Fresno, CA         |          487 |            169 |
+| Houston, TX        |         2942 |           1493 |
+| Indianapolis, IN   |         1322 |            594 |
+| Jacksonville, FL   |         1168 |            597 |
+| Kansas City, MO    |         1190 |            486 |
+| Las Vegas, NV      |         1381 |            572 |
+| Long Beach, CA     |          378 |            156 |
+| Los Angeles, CA    |         2257 |           1106 |
+| Louisville, KY     |          576 |            261 |
+| Memphis, TN        |         1514 |            483 |
+| Miami, FL          |          744 |            450 |
+| Milwaukee, wI      |         1115 |            403 |
+| Minneapolis, MN    |          366 |            187 |
+| Nashville, TN      |          767 |            278 |
+| New Orleans, LA    |         1434 |            930 |
+| New York, NY       |          627 |            243 |
+| Oakland, CA        |          947 |            508 |
+| Oklahoma City, OK  |          672 |            326 |
+| Omaha, NE          |          409 |            169 |
+| Philadelphia, PA   |         3037 |           1360 |
+| Phoenix, AZ        |          914 |            504 |
+| Pittsburgh, PA     |          631 |            337 |
+| Richmond, VA       |          429 |            113 |
+| Sacramento, CA     |          376 |            139 |
+| San Antonio, TX    |          833 |            357 |
+| San Bernardino, CA |          275 |            170 |
+| San Diego, CA      |          461 |            175 |
+| San Francisco, CA  |          663 |            336 |
+| Savannah, GA       |          246 |            115 |
+| St. Louis, MO      |         1677 |            905 |
+| Stockton, CA       |          444 |            266 |
+| Tampa, FL          |          208 |             95 |
+| Tulsa, OK          |          584 |            193 |
+| Washington, DC     |         1345 |            589 |
 
 The above table summarizes within cities the total number of homicides
 indicating by `total_number` and the number of unsolved homicides
@@ -157,7 +161,48 @@ baltimore_test %>%
 
 | estimate | conf.low | conf.high |
 |---------:|---------:|----------:|
-|     0.32 |    0.303 |     0.338 |
+|    0.646 |    0.628 |     0.663 |
 
 The estimate of proportion of homicides that are unsolved in Baltimore
-is 0.3204811 (95% CI: 0.3033582 to 0.3380962).
+is 0.6455607 (95% CI: 0.6275625 to 0.6631599).
+
+Write a `function(x)` for repeating the process of prop.test.
+
+``` r
+prop_test = function(x){
+  
+  summary = x %>% 
+  group_by(city_state) %>% 
+  summarize(
+    total_number = n(),
+    total_unsolved = sum(disposition %in% c("Closed without arrest", "Open/No arrest")
+  ))
+  
+  city_test = prop.test(
+    summary %>% pull(total_unsolved),
+    summary %>% pull(total_number)
+    ) %>% 
+  broom::tidy()
+  
+  city_test
+  
+}
+```
+
+Nesting the unrelated columns.
+
+``` r
+homicide_nest = homicide %>%
+  nest(data = uid:city_state)
+
+
+##### Mapping unsuccessful. Need to work on it later.
+# homicide_test = homicide_nest %>% 
+#  mutate(test = map(data, prop_test)) %>% 
+#  unnest() %>% 
+#  broom::tidy() %>% 
+#  select(estimate, conf.low, conf.high) %>% 
+#  knitr::kable(digits = 3)
+```
+
+Create a plot that shows the estimates and CI for each city
