--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -189,7 +189,8 @@ prop_test = function(x){
 }
 ```
 
-Nesting the unrelated columns.
+Nesting the unrelated columns. Map the nested data to the function
+`prop_test` to iterate the process of proportional testing.
 
 ``` r
 homicide_nest = homicide %>%
@@ -206,3 +207,18 @@ homicide_nest = homicide %>%
 ```
 
 Create a plot that shows the estimates and CI for each city
+
+``` r
+homicide_test %>% 
+  ggplot(aes(x = city_state, y = estimate)) +
+  geom_point() +
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) +
+  labs(
+    title = "The estimates and CIs for proportion of unsolved homicides for each city",
+    x = "City, State",
+    y = "Estimate Proportion")
+```
+
+Need interpretation of graph.
+
+# Problem 3
