Write down the function for running the t-test. Generate the estimate and p-value for testing mu=0.

--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -222,3 +222,38 @@ homicide_test %>%
 Need interpretation of graph.
 
 # Problem 3
+
+First write down the function to simulate data from a normal
+distribution, run a t.test, and return the estimates of t-statistics and
+p-value.
+
+``` r
+t_test = function(n = 30, mu, sigma = 5) {
+  
+  x = rnorm(n, mean = mu, sd = sigma)
+  
+  
+  t_test =
+    t.test(x, mu = 0) %>% 
+    broom::tidy() 
+  
+  t_test %>% 
+    select(estimate, p.value)
+  
+}
+```
+
+Then, generate 5000 datasets from `rnorm()` and run the `t_test` for mu
+= 0. Save the resulting estimate and p-value as `sim_mu0_df`.
+
+``` r
+sim_mu0_df = 
+  expand_grid(
+    true_mu = 0,
+    iter = 1:5000
+  ) %>% 
+  mutate(
+    estimate_df = map(.x = true_mu, ~ t_test(mu = .x))
+  ) %>% 
+  unnest()
+```
