--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -321,7 +321,7 @@ Repeat the above process for mu = {1, 2, 3, 4, 5, 6}
 sim_mu_df = 
   expand_grid(
     true_mu = c(1, 2, 3, 4, 5, 6),
-    iter = 1:10
+    iter = 1:5000
   ) %>% 
   mutate(
     estimate_df = map(.x = true_mu, ~ t_test(mu = .x))
@@ -368,22 +368,28 @@ Make a plot showing the average estimate of mu hat on the y axis and the
 true value of mu on the x-axis.
 
 ``` r
-sim_mu_df %>% 
-  ggplot(aes(x = true_mu, y = estimate)) +
-  geom_point()
-```
+sim_average = sim_mu_df %>% 
+  group_by(true_mu) %>% 
+  mutate(
+  avg_estimate = mean(estimate)
+) 
 
-<img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
-
-``` r
-sim_mu_df %>%
+sim_reject = sim_mu_df %>% 
+  group_by(true_mu) %>% 
   mutate(
     results = ifelse(
       p.value < 0.05, "Reject", "Fail to reject"
-    )) %>% 
+  )) %>% 
   filter(results == "Reject") %>% 
-  ggplot(aes(x = true_mu, y = mean(estimate))) +
-  geom_point()
+  mutate(
+    avg_estimate = mean(estimate)
+  )
+
+ggplot(sim_average, aes(x = true_mu, y = avg_estimate)) +
+  geom_point() +
+  geom_line() +
+  geom_point(data = sim_reject, color = "red") +
+  geom_line(data = sim_reject, color = "red")
 ```
 
-<img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-14-2.png" width="90%" />
+<img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
