--- a/p8105_hw5_yx2711.md
+++ b/p8105_hw5_yx2711.md
@@ -277,7 +277,10 @@ homicide_test %>%
 
 <img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
-Need interpretation of graph.
+After factor reordering the city_state by the estimates for proportion
+of unsolved homicides, we can observe that Richmond has the lowest
+estimate for proportion of unsolved homicides and Chicago has the
+highest estimate for proportion of unsolved homicides.
 
 # Problem 3
 
@@ -351,12 +354,13 @@ sim_mu_summary = sim_mu_df %>%
   
 sim_mu_summary %>% 
   ggplot(aes(x = true_mu, y = prop)) +
-  geom_path() + 
+  geom_point() +
+  geom_line() +
   labs(
     title = "The true value of mu vs the proportion of rejected",
     x = "True mu",
     y = "Proportion of rejected")  +
-  scale_fill_continuous(breaks = c(1, 2, 3, 4, 5, 6))
+  scale_x_continuous(breaks = c(1, 2, 3, 4, 5, 6))
 ```
 
 <img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
@@ -365,7 +369,10 @@ As the effect size, ie, the true mu, increases, the power, ie, the
 proportion of times the null was rejected will increase.
 
 Make a plot showing the average estimate of mu hat on the y axis and the
-true value of mu on the x-axis.
+true value of mu on the x-axis. Also, overlay the first plot with the
+second plot, which shows the average estimate of mu hat and the true
+value of mu after filtering out the samples for which the null was
+rejected.
 
 ``` r
 sim_average = sim_mu_df %>% 
@@ -389,7 +396,29 @@ ggplot(sim_average, aes(x = true_mu, y = avg_estimate)) +
   geom_point() +
   geom_line() +
   geom_point(data = sim_reject, color = "red") +
-  geom_line(data = sim_reject, color = "red")
+  geom_line(data = sim_reject, color = "red") +
+  labs(
+    title = "The true value of mu vs the average estimate of mu",
+    x = "True mu",
+    y = "Average estimate of mu")  +
+  scale_x_continuous(breaks = c(1, 2, 3, 4, 5, 6))
 ```
 
 <img src="p8105_hw5_yx2711_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+By observing the plot for true_mu vs average estimate for all samples,
+we can see a straight line with positive slope, indicating that the
+average estimates for mu are approximately the same as the true mu.
+
+After overlaying the two lines, we can easily observe that the sample
+average of mu hat is not equal to the true value of mu when true mu is
+less than 4. As the true mu gets larger than 4, the two lines
+overlapped, indicating that the sample average of mu hat is
+approximately the same as the true value of mu.
+
+Since true mu is equal to effect size, as effect size increase, the
+power will increase. As power increase, the proportion of rejection will
+increase. As the proportion of rejection increases, the number of
+rejection will be approximately the same as the total sample size.
+Therefore, we can observe a divergent trend when the true mu is less
+than 4 and a overlapped trend when the true mu is larger than 4.
